# Arbeiterfarm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
af-app/: Cargo.toml
af/crates/af-agents/: Cargo.toml
af/crates/af-agents/src/: compaction.rs  cwc_bridge.rs  error.rs  evidence_parser.rs  lib.rs  meta_tools.rs  orchestrator.rs  prompt_builder.rs  runtime.rs  schema_validator.rs  signal_parser.rs  thread_memory.rs  tool_call_parser.rs
af/crates/af-api/: Cargo.toml
af/crates/af-api/src/: auth.rs  dto.rs  error.rs  hooks.rs  lib.rs  rate_limit.rs  source_map.rs
af/crates/af-api/src/routes/: admin.rs  agents.rs  artifacts.rs  audit.rs  email_mgmt.rs  embed_queue.rs  health.rs  hooks.rs  llm.rs  members.rs  messages.rs  mod.rs  notifications.rs  plugins.rs  projects.rs  quota.rs  thinking.rs  threads.rs  tools.rs  url_ingest.rs  web_rules.rs  workflows.rs  yara_rules.rs
af/crates/af-auth/: Cargo.toml
af/crates/af-auth/src/: api_key.rs  authz.rs  error.rs  lib.rs
af/crates/af-builtin-tools/: Cargo.toml
af/crates/af-builtin-tools/src/: chunking.rs  embed.rs  embed_queue.rs  envelope.rs  file_grep.rs  file_hexdump.rs  file_info.rs  file_read_range.rs  file_strings.rs  lib.rs  specs.rs  url_ingest.rs
af/crates/af-cli/: Cargo.toml
af/crates/af-cli/src/: app.rs  bootstrap.rs  config.rs  lib.rs  local_agents.rs  local_models.rs  local_tools.rs  local_workflows.rs  plugin_runner.rs  render.rs  toml_plugin.rs
af/crates/af-cli/src/backend/: direct.rs  mod.rs  remote.rs
af/crates/af-cli/src/commands/: agent.rs  agent_file.rs  artifact.rs  audit.rs  chat.rs  email.rs  email_rule.rs  embed_queue.rs  ghidra_renames.rs  grant.rs  hook.rs  mod.rs  notify.rs  project.rs  serve.rs  think.rs  thread.rs  thread_export.rs  tick.rs  tool.rs  url_ingest.rs  user.rs  web_rule.rs  worker.rs  workflow.rs  yara.rs
af/crates/af-core/: Cargo.toml
af/crates/af-core/src/: agent.rs  agent_event.rs  context.rs  error.rs  evidence.rs  executor.rs  identity.rs  lib.rs  llm_types.rs  plugin.rs  plugin_db.rs  registry.rs  renderer.rs  resolver.rs  types.rs
af/crates/af-db/: Cargo.toml
af/crates/af-db/migrations/: 001_initial.sql  002_slice2.sql  003_plugin_migrations.sql  004_audit.sql  005_message_tool_fields.sql  006_tenancy.sql  007_rbac.sql  008_quotas.sql  009_audit_immutable.sql  010_rls.sql  011_security_hardening.sql  012_agents_and_workflows.sql  013_message_seq.sql  014_rate_limit.sql  015_artifact_metadata.sql  016_thread_lineage.sql  017_artifact_description.sql  018_manager_role.sql  019_source_plugin.sql  020_project_hooks.sql  021_agent_timeout.sql  022_thread_type.sql  023_user_allowed_routes.sql  024_llm_usage_log.sql  025_context_compaction.sql  026_embeddings.sql  027_project_settings.sql  028_nda.sql  029_web_gateway.sql  030_email.sql  031_fix_rls_search_path.sql  032_thread_memory.sql  033_thread_target_artifact.sql  034_embed_queue.sql  035_url_ingest_queue.sql  036_notifications.sql
af/crates/af-db/src/: agents.rs  api_keys.rs  artifacts.rs  audit_log.rs  blobs.rs  email.rs  embed_queue.rs  embeddings.rs  lib.rs  llm_usage_log.rs  message_evidence.rs  messages.rs  notifications.rs  project_hooks.rs  project_members.rs  projects.rs  restricted_tools.rs  scoped.rs  scoped_plugin_db.rs  thread_export.rs  thread_memory.rs  threads.rs  tool_config.rs  tool_run_artifacts.rs  tool_run_events.rs  tool_runs.rs  url_ingest.rs  user_allowed_routes.rs  user_quotas.rs  users.rs  web_fetch.rs  workflows.rs  yara.rs
af/crates/af-email/: Cargo.toml
af/crates/af-email/src/: executor.rs  lib.rs  rate_limiter.rs  recipient_rules.rs  scheduler.rs  specs.rs  tone.rs  types.rs
af/crates/af-email/src/providers/: gmail.rs  mod.rs  protonmail.rs
af/crates/af-jobs/: Cargo.toml
af/crates/af-jobs/src/: context_builder.rs  daemon.rs  enqueue.rs  invoker.rs  lib.rs  oop_executor.rs  reaper.rs  worker.rs
af/crates/af-llm/: Cargo.toml
af/crates/af-llm/src/: anthropic.rs  backend.rs  embedding.rs  error.rs  lib.rs  local_llm.rs  model_catalog.rs  openai.rs  redact.rs  request.rs  router.rs  vertex.rs
af/crates/af-notify/: Cargo.toml
af/crates/af-notify/src/: channels.rs  executor.rs  lib.rs  listener.rs  queue.rs  specs.rs
af/crates/af-storage/: Cargo.toml
af/crates/af-storage/src/: artifact_store.rs  blob_store.rs  lib.rs  output_store.rs  scratch.rs
af/crates/af-web-gateway/: Cargo.toml
af/crates/af-web-gateway/src/: executor.rs  gateway.rs  geoip.rs  lib.rs  rate_limiter.rs  rules.rs  specs.rs  ssrf.rs
arbeiterfarm/: Cargo.toml
arbeiterfarm/crates/af-re-sandbox/: Cargo.toml
arbeiterfarm/crates/af-re-sandbox/src/: agent_client.rs  executor.rs  gateway.rs  hooks.rs  lib.rs  qmp.rs  specs.rs
arbeiterfarm/crates/af-re-tools/: Cargo.toml
arbeiterfarm/crates/af-re-tools/src/: agents.rs  artifact_describe.rs  artifact_search.rs  common.rs  dedup.rs  doc_chunk.rs  doc_ingest.rs  doc_parse.rs  evidence_resolver.rs  family.rs  ghidra_analyze.rs  ghidra_decompile.rs  ghidra_rename.rs  ghidra_renames_db.rs  ghidra_suggest_renames.rs  ioc_extractor.rs  ioc_hook.rs  ioc_pivot.rs  lib.rs  plugin.rs  rizin_bininfo.rs  rizin_disasm.rs  rizin_xrefs.rs  specs.rs  strings_extract.rs  transform_convert.rs  transform_csv.rs  transform_decode.rs  transform_jq.rs  transform_regex.rs  transform_unpack.rs  yara_generate.rs  yara_hook.rs  yara_list.rs  yara_scan.rs  yara_test.rs
arbeiterfarm/crates/af-re-vt/: Cargo.toml
arbeiterfarm/crates/af-re-vt/src/: cache.rs  executor.rs  gateway.rs  lib.rs  rate_limiter.rs  specs.rs
arbeiterfarm/ghidra-scripts/: DecompileFunctionsJSON.java  ListFunctionsJSON.java  RenameFunctionJSON.java
arbeiterfarm/migrations/: 001_iocs.sql  002_vt_cache.sql  003_artifact_families.sql  004_cross_schema_views.sql  005_yara.sql  006_ghidra_renames.sql  007_nda_hardening.sql
arbeiterfarm/sandbox-agent/: agent.py  requirements.txt
arbeiterfarm/sandbox-agent/hooks/: default.js
arbeiterfarm/src/: echo_tool.rs  main.rs
docs/: AGENT_ROADMAP.md  ARCHITECTURE.txt  FEATURES.md  INSTALL.md  OVERVIEW.md  PROJECT_OVERVIEW.md  THREAT_MODEL_V4.md  (+9 more)
(+90 files in other folders)
