[package]
name = "af-agents"
version = "0.1.0"
edition = "2021"
authors = ["Dumitru Stama"]

[dependencies]
af-core = { workspace = true }
af-llm = { workspace = true }
af-db = { workspace = true }
af-jobs = { workspace = true }
cwc-core = { workspace = true }
cwc-session = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
