[package]
name = "af-core"
version = "0.1.0"
edition = "2021"
authors = ["Dumitru Stama"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
