[package]
name = "af-db"
version = "0.1.0"
edition = "2021"
authors = ["Dumitru Stama"]

[dependencies]
af-core = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
pgvector = { version = "0.4", features = ["sqlx"] }
base64 = "0.22"
