[package]
name = "af-email"
version = "0.1.0"
edition = "2021"
authors = ["Dumitru Stama"]

[dependencies]
af-core = { workspace = true }
af-db = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
async-imap = "0.10"
async-native-tls = "0.5"
anyhow = { workspace = true }
