[package]
name = "af-storage"
version = "0.1.0"
edition = "2021"
authors = ["Dumitru Stama"]

[dependencies]
af-core = { workspace = true }
af-db = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
