[package]
name = "af-web-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Dumitru Stama"]

[dependencies]
af-core = { workspace = true }
af-db = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
regex = { workspace = true }
url = "2"
html2text = "0.12"
maxminddb = "0.24"
futures-util = "0.3"
